fixing scaling issue, hero image overflow etc

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ html, body {
 body {
     /* display: flex;
     flex-direction: column; */
-
+    
 }
 
 nav {
@@ -57,7 +57,9 @@ main {
 
 #home {
     position: relative;
-    height: calc(100vh - 60px);
+    height: 100vh;
+    max-height: 100vh;
+    /* calc(100vh - 60px); */
     margin-top: 60px;
     background-image: url("Images/pickup_camper_godot.png");
     background-size: cover;
@@ -65,6 +67,8 @@ main {
     margin: 0;
     width: 100vw;
     min-height: 750px;
+    overflow-x: hidden;
+
 }
 
 #horizontal-bar {
@@ -94,7 +98,6 @@ main {
     padding-bottom: 16px;
     padding: auto;
     text-align: center;
-    scroll-margin: 0px;
 }
 #screenshots p {
     margin-top: 0px;
@@ -114,7 +117,6 @@ main {
     /* background-color: pink; */
     /* padding-left: 5em;
     padding-right: 5em; */
-    scroll-margin-top: 0;
 }
 
 #metal-pole {
@@ -136,10 +138,15 @@ main {
     justify-content: center;
     align-items: center;
     padding-bottom: 20px;
-    margin-top: 12px;
-    border-radius: 15px;
+    margin-top: 8px;
+    border-radius: 4px;
     z-index: 3;
     /* margin-bottom: 162px; */
+}
+
+#trailer h2 {
+    margin-top: 3px;
+    margin-bottom: 3px;
 }
 
 #description {
@@ -155,6 +162,8 @@ main {
     border-width: 5px;
     font-weight:400px;
     z-index: 3;
+    margin-right: 1em;
+    margin-left: 1em;
 }
 
 .special {
@@ -183,6 +192,10 @@ main {
     pointer-events: none;
     transform: scale(75%);
     transform-origin: bottom right;
+}
+
+#hero img {
+    overflow: hidden;
 }
 
 #logo {
